--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
 
 
         <!--        my expertise section-->
-        <section id="expertise">
-            <dfn id="expertise-section"></dfn>
+        <section>
+
+            <dfn id="expertise"></dfn>
 
             <h5>My Expertise</h5>
             <h1>What Can I Do For Your Needs</h1>
@@ -157,12 +158,11 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
+                            <div class="web-image"></div>
                             <div class="overlay"></div>
-
 
                             <div class="inner">
                                 <h2>Web Design</h2>
-
                                 <!--                           <h4>Start eating better</h4>-->
                             </div>
                             <div class="serv-num">01.</div>
@@ -175,14 +175,15 @@
                         <div class="cf-inner">
                             <div class="inner">
                                 <div class="dec-icon">
-                                    <img src="assets/images/expertise/web%20design.png" alt="">
+                                    <img src="assets/images/expertise/Enterprise%20Application.png" alt="lakshan">
                                 </div>
-                                <p> Develop any kind of web application either to conduct your business activities or to promote your business.</p>
+                                <p>  Develop any kind of web application either to conduct your business activities or to promote your business.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
 
             <div class="col-md-2">
                 <div class="content-inner fl-wrap">
@@ -191,7 +192,7 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
-                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="web-image"></div>
                             <div class="overlay"></div>
 
                             <div class="inner">
@@ -225,7 +226,7 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
-                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="web-image"></div>
                             <div class="overlay"></div>
 
                             <div class="inner">
@@ -259,7 +260,7 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
-                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="web-image"></div>
                             <div class="overlay"></div>
 
                             <div class="inner">
@@ -293,7 +294,7 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
-                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="web-image"></div>
                             <div class="overlay"></div>
 
                             <div class="inner">
@@ -326,7 +327,7 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
-                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="web-image"></div>
                             <div class="overlay"></div>
 
                             <div class="inner">
@@ -352,6 +353,8 @@
                 </div>
             </div>
         </section>
+
+
 
 
         <!--        about me section-->
