--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
-                            <div class="web-image"></div>
+                            <div class="Enterprise-image"></div>
                             <div class="overlay"></div>
 
                             <div class="inner">
@@ -226,7 +226,7 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
-                            <div class="web-image"></div>
+                            <div class="ui-image"></div>
                             <div class="overlay"></div>
 
                             <div class="inner">
@@ -260,7 +260,7 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
-                            <div class="web-image"></div>
+                            <div class="IOT-image"></div>
                             <div class="overlay"></div>
 
                             <div class="inner">
@@ -294,7 +294,7 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
-                            <div class="web-image"></div>
+                            <div class="Graphic-image"></div>
                             <div class="overlay"></div>
 
                             <div class="inner">
@@ -327,7 +327,7 @@
                     <div class="content-front">
 
                         <div class="cf-inner">
-                            <div class="web-image"></div>
+                            <div class="Bug-image"></div>
                             <div class="overlay"></div>
 
                             <div class="inner">
