--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                                 <div class="coccoc-alo-location coccoc-alo-green coccoc-alo-show">
                                     <div class="coccoc-alo-lo-circle"></div>
                                     <div class="coccoc-alo-lo-circle-fill"></div>
-                                    <div class="coccoc-alo-lo-img-circle"><a href="https://www.google.com/maps/place/5%C2%B057'41.3%22N+80%C2%B033'16.6%22E/@5.9614775,80.5520362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d5.9614722!4d80.5546111?entry=ttu"  target="_blank" target="_blank"></a></div>
+                                    <div class="coccoc-alo-lo-img-circle"></div>
                                 </div>
                             </div>
                         </div>
