--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=yes,
     initial-scale=1, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="icon" href="HTML/icons8-l-64%20(1).png">
+    <link rel="icon" href="HTML/Frame%2025%20(2).png">
     <meta name="keywords" content="IJSE,GDSE,HTML,ABCD,Lakshan">
     <meta name="description" content="Nice to meet you, Lakshan Rashmika! As a software engineer, you can generate a placeholde">
     <meta name="owner " content="IJSE">
