--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
                 <img src="assets/images/home/Frame 9.png" alt="lakshan"/>
             </div>
 
-            <div></div>
+            <div>
+                <div></div>
+                <div></div>
+            </div>
 
             <div>
                 <img src="assets/images/home/myImage.png" alt="myImage"/>
