--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
+
 
     <!-----------------------------------320px----------------------------------->
     <link rel="stylesheet" href="assets/css/Responsive580px/section1.css">
@@ -112,8 +115,8 @@
             <div>
                 <aside>
                     <div>
-                        <h2>Hello I'm</h2>
-                        <h1>Lakshan <span>Rashmika</span></h1>
+                        <h2 class="animate__animated animate__fadeInUp">Hello I'm</h2>
+                        <h1 class="animate__animated animate__fadeInLeft">Lakshan <span>Rashmika</span></h1>
 
                         <img src="assets/images/home/icomoon_e64a(0)_64.png">
                         <p>
@@ -123,7 +126,7 @@
 
                     </div>
 
-                    <div class="btn-box">
+                    <div class="btn-box" >
                         <a href="#about-section" class="btn">About Me</a>
                         <span class="animate" style="--i:5;"></span>
                     </div>
@@ -148,8 +151,8 @@
 
             <dfn id="expertise"></dfn>
 
-            <h5>My Expertise</h5>
-            <h1>What Can I Do For Your Needs</h1>
+            <h5 class="animate__animated animate__fadeInLeft">My Expertise</h5>
+            <h1 >What Can I Do For Your Needs</h1>
             <p>Some understanding of software application concept, design,  evaluation and maintenance. To create software solutions for end users,
                 software engineers have little understanding of their programming  languages</p>
 
@@ -369,7 +372,7 @@
 
             <div>
 
-                <h5>About Me</h5>
+                <h5 class="animate__animated animate__fadeInRight">About Me</h5>
 
                 <h1>I Can Develop That Help People</h1>
 
@@ -397,7 +400,7 @@
         <!--        education section-->
         <section id="education">
             <dfn id="education-section"></dfn>
-            <h5>Education</h5>
+            <h5 class="animate__animated animate__fadeInLeft">Education</h5>
             <h1>My Resume</h1>
 
             <img id="pathImg" src="assets/images/education/Frame%201%20(1).png">
@@ -468,7 +471,10 @@
                 <p>In this section I mention my specific featured projects. you can click that projects and go to that websites.
                     and also you can go to the other project page click using the "My project and Assignments" button.
                 </p>
-                <a href="page/Assignment.html" target="_blank">Assignment</a>
+                <div class="Assignment-box">
+                    <a href="page/Assignment.html" class="btn" target="_blank">Assignment</a>
+                    <span class="animate" style="--i:5;"></span>
+                </div>
             </div>
 
             <div>
