--- a/index.html
+++ b/index.html
@@ -116,7 +116,13 @@
                 <aside>
                     <div>
                         <h2 class="animate__animated animate__fadeInUp">Hello I'm</h2>
-                        <h1 class="animate__animated animate__fadeInLeft">Lakshan <span>Rashmika</span></h1>
+                        <div class="wrapper">
+                            <svg>
+                                <text x="50%" y="50%" dy=".35em" text-anchor="middle">
+                                    Lakshan
+                                </text>
+                            </svg>
+                        </div>
 
                         <img src="assets/images/home/icomoon_e64a(0)_64.png">
                         <p>
