--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
                             </svg>
                         </div>
 
+                        <div class="wrapp">
+                            <svg class="svg">
+                                <text x="50%" y="50%" dy=".35em" text-anchor="middle">
+                                    Rashmika
+                                </text>
+                            </svg>
+                        </div>
+
                         <img src="assets/images/home/icomoon_e64a(0)_64.png">
                         <p>
                             I am currently studying for a software engineer diploma at IJSE and I am also studying other subjects.
