--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
                 <aside>
                     <div>
                         <h2 class="animate__animated animate__fadeInUp">Hello I'm</h2>
+<!--                        <h1>Lakshan <span>Rashmika</span></h1>-->
                         <div class="wrapper">
-                            <svg>
+                            <svg class="svg-font">
                                 <text x="50%" y="50%" dy=".35em" text-anchor="middle">
                                     Lakshan
                                 </text>
@@ -125,7 +126,7 @@
                         </div>
 
                         <div class="wrapp">
-                            <svg class="svg">
+                            <svg class="svg-font2">
                                 <text x="50%" y="50%" dy=".35em" text-anchor="middle">
                                     Rashmika
                                 </text>
