--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                     </div>
 
                     <div>
-                        <div class="wrapper">
+                        <div class="wrap">
                             <div class="ring">
                                 <div class="coccoc-alo-phone coccoc-alo-green coccoc-alo-show">
                                     <div class="coccoc-alo-ph-circle"></div>
@@ -557,7 +557,7 @@
                     </div>
 
                     <div>
-                        <div class="wrapper">
+                        <div class="wrap">
                             <div  class="ring">
                                 <div class="coccoc-alo-location coccoc-alo-green coccoc-alo-show">
                                     <div class="coccoc-alo-lo-circle"></div>
@@ -574,7 +574,7 @@
                     </div>
 
                     <div>
-                        <div class="wrapper">
+                        <div class="wrap">
                             <div class="ring">
                                 <div class="coccoc-alo-email coccoc-alo-green coccoc-alo-show">
                                     <div class="coccoc-alo-em-circle"></div>
