--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <div class="cf-inner">
                             <div class="inner">
                                 <div class="dec-icon">
-                                    <img src="assets/images/expertise/Enterprise%20Application.png" alt="lakshan">
+                                    <img src="assets/images/expertise/web%20design.png" alt="lakshan">
                                 </div>
                                 <p>  Develop any kind of web application either to conduct your business activities or to promote your business.</p>
                             </div>
