--- a/index.html
+++ b/index.html
@@ -642,10 +642,10 @@
         <div class="wave" id="wave4"></div>
     </div>
     <ul class="social_icons">
-        <a href="#" target="_blank"><i class='bx bxl-facebook'></i></a>
-        <a href="#" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
-        <a href="#" target="_blank"><i class='bx bxl-github'></i></a>
-        <a href="https://linkedin.com/in/nethmi-thathsarani-230601221"><i class='bx bxl-linkedin'></i></a>
+        <a href="https://www.facebook.com/lakshan.rashmika.925" target="_blank"><i class='bx bxl-facebook'></i></a>
+        <a href="https://www.instagram.com/lak_rashmika/" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+        <a href="https://github.com/lakshan-a" target="_blank"><i class='bx bxl-github'></i></a>
+        <a href="https://www.linkedin.com/in/lakshan-rashmika-4a7566249/"><i class='bx bxl-linkedin'></i></a>
     </ul>
 
     <ul class="menu">
