--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 
 
     <!-----------------------------------320px----------------------------------->
-    <link rel="stylesheet" href="assets/css/Responsive320px/section1.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section2.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section3.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section4.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section6.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section7.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section8.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/footer.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section1.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section2.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section3.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section4.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section6.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section7.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section8.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/footer.css">
 
     <!-----------------------------------1024px----------------------------------->
     <link rel="stylesheet" href="assets/css/Responsive1024px/section1.css">
@@ -57,14 +57,14 @@
 
 
     <!-----------------------------------425px----------------------------------->
-    <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section2.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section3.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section4.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section6.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section7.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section8.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/footer.css">
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section2.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section3.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section4.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section6.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section7.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section8.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/footer.css">-->
 
 
 
