--- a/assignments/Css_Framework/pos/item.html
+++ b/assignments/Css_Framework/pos/item.html
@@ -36,9 +36,107 @@
             </div>
         </div>
     </nav>
-
-
 </header>
+
+<section class="container-fluid p-0 position-relative bg-danger">
+    <div class="row">
+
+    </div>
+
+    <div class="row position-absolute container-fluid ">
+
+        <div class="col-1"></div>
+
+        <div class="mt-1 col-12 col-sm-6 col-md-5 col-lg-4 col-xl-5  col-xxl-5 ">
+
+            <div>
+
+                <form>
+
+                    <h2 style="color: black" class="text-center m-4">Item</h2>
+
+                    <div class="mb-3">
+                        <label for="id" class="form-label" style="color: black">Item Code :</label>
+                        <input type="id" class="form-control" id="id">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="name" class="form-label" style="color: black">Item Name :</label>
+                        <input type="name" class="form-control" id="name">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="tel" class="form-label" style="color: black">Item Price :</label>
+                        <input type="tel" class="form-control" id="tel">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="address" class="form-label" style="color: black">Item Quantity : </label>
+                        <input type="address" class="form-control" id="address">
+                    </div>
+
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end my-5">
+                        <button class="btn btn-primary me-md-2" type="button">Save</button>
+                        <button class="btn btn-primary" type="button">Update</button>
+                        <button class="btn btn-primary" type="button">Delete</button>
+                    </div>
+
+                </form>
+
+            </div>
+
+        </div>
+
+        <div class="col-1"></div>
+
+        <div class=" mt-5 col-12 col-sm-6 col-md-5 col-lg-6 col-xl-5  col-xxl-5 ">
+
+            <div>
+
+                <h2 style="color: black" class="text-center m-3">Item Details</h2>
+
+                <table class="table  mt-5 col-10 col-sm-5 col-md-4 col-lg-5 col-xl-4  col-xxl-4">
+                    <thead>
+                    <tr>
+                        <th scope="col">Code</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Qty</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">C001</th>
+                        <td>Rice</td>
+                        <td>200.00</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">C002</th>
+                        <td>Milo</td>
+                        <td>150.00</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">C003</th>
+                        <td>tea</td>
+                        <td>100.00</td>
+                        <td>3</td>
+                    </tr>
+                    </tbody>
+                </table>
+
+
+            </div>
+
+        </div>
+
+        <div class="col-1"></div>
+
+    </div>
+
+</section>
+
 </body>
 
 </html>
