--- a/assignments/Css_Framework/pos/customer.html
+++ b/assignments/Css_Framework/pos/customer.html
@@ -41,17 +41,13 @@
 <section class="container-fluid p-0 position-relative bg-danger">
     <div class="row">
 
-<!--        <div class="col">-->
-<!--            <div style="height: 100px"></div>-->
-<!--        </div>-->
-
     </div>
 
-    <div class="row position-absolute container-fluid">
+    <div class="row position-absolute container-fluid ">
 
         <div class="col-1"></div>
 
-        <div class="col-4">
+        <div class="mt-1 col-12 col-sm-6 col-md-5 col-lg-4 col-xl-5  col-xxl-5 ">
 
             <div>
 
@@ -59,32 +55,30 @@
 
                     <h2 style="color: black" class="text-center m-4">Customer Registration</h2>
 
-                    <div class="col  mt-5">
-                        <!--Form--> <!--Slider-->
-                        <div>
-                            <div class="mb-3">
-                                <label for="txtID" class="form-label">Customer ID</label>
-                                <input type="text" class="form-control" id="txtID" placeholder="Customer ID">
-                            </div>
-                            <div class="mb-3">
-                                <label for="txtName" class="form-label">Customer Name</label>
-                                <input type="text" class="form-control" id="txtName" placeholder="Customer Name">
-                            </div>
-                            <div class="mb-3">
-                                <label for="txtAddress" class="form-label">Customer Address</label>
-                                <input type="text" class="form-control" id="txtAddress" placeholder="Customer Address">
-                            </div>
-                            <div class="mb-3">
-                                <label for="txtTP" class="form-label">Customer TP</label>
-                                <input type="text" class="form-control" id="txtTP" placeholder="Customer TP">
-                            </div>
-                            <button type="button" class="btn btn-primary">Save Customer</button>
-                        </div>
+                    <div class="mb-3">
+                        <label for="id" class="form-label" style="color: black">Customer ID :</label>
+                        <input type="id" class="form-control" id="id">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="name" class="form-label" style="color: black">Customer Name :</label>
+                        <input type="name" class="form-control" id="name">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="tel" class="form-label" style="color: black">Customer Address :</label>
+                        <input type="tel" class="form-control" id="tel">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="address" class="form-label" style="color: black">Customer Salary : </label>
+                        <input type="address" class="form-control" id="address">
                     </div>
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end my-5">
                         <button class="btn btn-primary me-md-2" type="button">Save</button>
                         <button class="btn btn-primary" type="button">Update</button>
+                        <button class="btn btn-primary" type="button">Delete</button>
                     </div>
 
                 </form>
