--- a/assignments/Css_Framework/pos/home.html
+++ b/assignments/Css_Framework/pos/home.html
@@ -10,33 +10,37 @@
 
 <body>
 
-<header class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark  " style="height: 70px">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="home.html">SuperMarket</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                <li>
+                    <a class="nav-link text-white" href="home.html">Home</a>
+                </li>
+                <li>
+                <li>
+                    <a class="nav-link text-white" href="Item.html">Item</a>
+                </li>
+                <li>
+                    <a class="nav-link text-white" href="customer.html">Customer</a>
+                </li>
+                <li>
+                    <a class="nav-link text-white" href="placeOrder.html">Order</a>
+                </li>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">POS</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="home.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="customer.html">Customer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="item.html">Item</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="placeOrder.html">Order</a>
-                    </li>
-                </ul>
-            </div>
+
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
         </div>
-    </nav>
-</header>
+    </div>
+</nav>
 </body>
 
 </html>
