--- a/assignments/Css_Framework/pos/item.html
+++ b/assignments/Css_Framework/pos/item.html
@@ -22,11 +22,10 @@
                     <a class="nav-link text-white" href="home.html">Home</a>
                 </li>
                 <li>
-                <li>
-                    <a class="nav-link text-white" href="Item.html">Item</a>
+                    <a class="nav-link text-white" href="customer.html">Customer</a>
                 </li>
                 <li>
-                    <a class="nav-link text-white" href="customer.html">Customer</a>
+                    <a class="nav-link text-white" href="Item.html">Item</a>
                 </li>
                 <li>
                     <a class="nav-link text-white" href="placeOrder.html">Order</a>
@@ -36,7 +35,7 @@
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
         </div>
     </div>
@@ -80,9 +79,9 @@
                     </div>
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end my-4">
-                        <button class="btn btn-primary me-md-2" type="button">Save</button>
-                        <button class="btn btn-primary" type="button">Update</button>
-                        <button class="btn btn-primary" type="button">Delete</button>
+                        <button class="btn btn-outline-primary" type="button">Save</button>
+                        <button class="btn btn-outline-primary" type="button">Update</button>
+                        <button class="btn btn-outline-primary" type="button">Delete</button>
                     </div>
 
                 </form>
