--- a/assignments/Css_Framework/pos/customer.html
+++ b/assignments/Css_Framework/pos/customer.html
@@ -12,7 +12,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark  " style="height: 70px">
     <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">SuperMarket</a>
+        <a class="navbar-brand" href="home.html">Finest SuperMarket</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -82,6 +82,7 @@
                         <button class="btn btn-outline-primary" type="button">Save</button>
                         <button class="btn btn-outline-primary" type="button">Update</button>
                         <button class="btn btn-outline-primary" type="button">Delete</button>
+                        <button class="btn btn-outline-primary" type="button">Get All</button>
                     </div>
 
                 </form>
