--- a/assignments/Css_Framework/pos/home.html
+++ b/assignments/Css_Framework/pos/home.html
@@ -12,7 +12,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark  " style="height: 70px">
     <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">SuperMarket</a>
+        <a class="navbar-brand" href="home.html">Finest SuperMarket</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,6 +40,23 @@
         </div>
     </div>
 </nav>
+
+<section class="container-fluid p-0 position-relative" style="height: 80vh; width: 100vw">
+
+    <img src="assets/bac/Frame 27 (3).png" class="img-fluid position-absolute col-12" style="height: 88.5vh; width: 100vw">
+
+<!--    <img src="assets/bac/Frame 27.png"/>-->
+
+    <div class="position-absolute text-center w-100">
+
+        <h1 style="color: white">Welcome</h1>
+        <h1 style="color: white; font-size: 4vw">Finest SuperMarket</h1>
+
+    </div>
+
+</section>
+
+
 </body>
 
 </html>
