--- a/assignments/Css_Framework/pos/placeOrder.html
+++ b/assignments/Css_Framework/pos/placeOrder.html
@@ -12,7 +12,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark  " style="height: 70px">
     <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">SuperMarket</a>
+        <a class="navbar-brand" href="home.html">Finest SuperMarket</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -222,14 +222,14 @@
     </div>
 </div>
 
-<table class="table table-bordered table-hover mt-3 ">
+<table class="table table-hover mt-3">
     <thead>
     <tr>
-        <th class="bg-dark text-white">Item Code</th>
-        <th class="bg-dark text-white">Item Name</th>
-        <th class="bg-dark text-white">Price</th>
-        <th class="bg-dark text-white">Qty</th>
-        <th class="bg-dark text-white">Total</th>
+        <th scope="col">Item Code</th>
+        <th scope="col">Item Name</th>
+        <th scope="col">Price</th>
+        <th scope="col">Qty</th>
+        <th scope="col">Total</th>
     </tr>
     </thead>
     <tbody>
