--- a/assignments/Css_Framework/pos/home.html
+++ b/assignments/Css_Framework/pos/home.html
@@ -25,7 +25,7 @@
                     <a class="nav-link text-white" href="customer.html">Customer</a>
                 </li>
                 <li>
-                    <a class="nav-link text-white" href="Item.html">Item</a>
+                    <a class="nav-link text-white" href="item.html">Item</a>
                 </li>
                 <li>
                     <a class="nav-link text-white" href="placeOrder.html">Order</a>
@@ -43,7 +43,7 @@
 
 <section class="container-fluid p-0 position-relative" style="height: 80vh; width: 100vw">
 
-    <img src="assets/bac/Frame 27 (3).png" class="img-fluid position-absolute col-12" style="height: 88.5vh; width: 100vw">
+    <img src="assets/bac/Frame 27 (3).png" class="img-fluid position-absolute col-12" style="height: 90vh; width: 100vw">
 
 <!--    <img src="assets/bac/Frame 27.png"/>-->
 
