--- a/assignments/Css_Framework/pos/placeOrder.html
+++ b/assignments/Css_Framework/pos/placeOrder.html
@@ -25,7 +25,7 @@
                     <a class="nav-link text-white" href="customer.html">Customer</a>
                 </li>
                 <li>
-                    <a class="nav-link text-white" href="Item.html">Item</a>
+                    <a class="nav-link text-white" href="item.html">Item</a>
                 </li>
                 <li>
                     <a class="nav-link text-white" href="placeOrder.html">Order</a>
