--- a/assignments/Css_Framework/pos/home.html
+++ b/assignments/Css_Framework/pos/home.html
@@ -16,8 +16,8 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+        <div class="collapse navbar-collapse  " id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 " style="margin-left: 23vw;">
                 <li>
                     <a class="nav-link text-white" href="home.html">Home</a>
                 </li>
@@ -41,9 +41,9 @@
     </div>
 </nav>
 
-<section class="container-fluid p-0 position-relative" style="height: 80vh; width: 100vw">
+<section class="container-fluid p-0 position-relative" style="height: 88.5vh; width: 100vw">
 
-    <img src="assets/bac/Frame 27 (3).png" class="img-fluid position-absolute col-12" style="height: 90vh; width: 100vw">
+    <img src="assets/bac/Frame 27 (3).png" class="img-fluid position-absolute col-12" style="height: 88.5vh; width: 100vw">
 
 <!--    <img src="assets/bac/Frame 27.png"/>-->
 
