--- a/assignments/Css_Framework/pos/placeOrder.html
+++ b/assignments/Css_Framework/pos/placeOrder.html
@@ -17,7 +17,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 " style="margin-left: 23vw;">
                 <li>
                     <a class="nav-link text-white" href="home.html">Home</a>
                 </li>
