--- a/assignments/Css_Framework/pos/placeOrder.html
+++ b/assignments/Css_Framework/pos/placeOrder.html
@@ -2,38 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Finest SuperMarket</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
+    <script src="assets/bootstrap/js/bootstrap.js"></script>
 
 
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark  " style="height: 70px">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark  ">
     <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">Finest SuperMarket</a>
+        <a class="navbar-brand" href="../../../index.html">Finest SuperMarket</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 " style="margin-left: 23vw;">
-                <li>
-                    <a class="nav-link text-white" href="home.html">Home</a>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                 </li>
-                <li>
-                    <a class="nav-link text-white" href="customer.html">Customer</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="customer.html">Customer</a>
                 </li>
-                <li>
-                    <a class="nav-link text-white" href="item.html">Item</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="item.html">Item</a>
                 </li>
-                <li>
-                    <a class="nav-link text-white" href="placeOrder.html">Order</a>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: rgb(0 6 255);"  href="placeOrder.html">Order</a>
                 </li>
-
 
             </ul>
-            <form class="d-flex">
+            <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
